test/errors/ivar2.ls

#OUTPUT
#Syntax Error: Expected assignment operator.
# -> [13] x : int 10
#
#END

#RET 1

extern func printf(s:str, ...)

func main -> int
    x : int 10
begin
    return 0
end

